--- a/gradle.properties
+++ b/gradle.properties
@@ -9,16 +9,16 @@ modSourcesURL=https://github.com/chylex/Better-Controls
 modIssuesURL=https://github.com/chylex/Better-Controls/issues
 
 # Dependencies
-minecraftVersion=1.20.3
-neoForgeVersion=20.3.8-beta
-fabricVersion=0.14.21
-loomVersion=1.3
+minecraftVersion=1.20.6
+neoForgeVersion=20.6.18-beta
+#fabricVersion=0.15.10
+loomVersion=1.6
 mixinVersion=0.8.5
 
 # Constraints
-minimumMinecraftVersion=1.20.3
-minimumNeoForgeVersion=20.3.7
-minimumFabricVersion=0.12.3
+minimumMinecraftVersion=1.20.6
+minimumNeoForgeVersion=20.6.18-beta
+minimumFabricVersion=0.15.10
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
